[build-system]
requires = ["setuptools >= 69", "setuptools_scm[toml] >= 8"]
build-backend = "setuptools.build_meta"

[project]
name = "bio2zarr"
description = "Convert bioinformatics data to Zarr"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "sgkit Developers", email = "project@sgkit.dev"},
]
dependencies = [
  # Pin numpy to >= 1.26 because this enables ICF files to be supported
  # across numpy 1 and 2 (due to pickle format)
  "numpy >= 1.26",
  "zarr >= 2.17,< 3",
  # Pinning numcodecs due to https://github.com/zarr-developers/zarr-python/issues/2963
  "numcodecs[msgpack]!=0.14.0,!=0.14.1,<0.16",
  "click",
  "tabulate",
  "tqdm",
  "humanfriendly",
  # cyvcf2 also pulls in coloredlogs and click",
  # colouredlogs pulls in humanfriendly",
  "cyvcf2",
  "bed_reader",
  # TODO Using dev version of tskit for CI, FIXME before release
  "tskit @ git+https://github.com/tskit-dev/tskit.git@main#subdirectory=python",
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Operating System :: MacOS :: MacOS X",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering"
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/sgkit-dev/bio2zarr"
documentation = "https://sgkit-dev.github.io/bio2zarr/"

[project.scripts]
vcf2zarr = "bio2zarr.cli:vcf2zarr_main"
vcfpartition = "bio2zarr.cli:vcfpartition"
tskit2zarr = "bio2zarr.cli:tskit2zarr_main"

[project.optional-dependencies]
dev = [
  "click>=8.2.0",
  "hypothesis-vcf",
  "msprime",
  "pysam",
  "pytest",
  "pytest-coverage",
  "pytest-xdist",
  "sgkit>=0.8.0",
  "tqdm"
]

[tool.setuptools]
packages = ["bio2zarr"]

[tool.setuptools_scm]
version_file = "bio2zarr/_version.py"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--cov=bio2zarr --cov-report term-missing"

[tool.ruff]
# Assume Python 3.10
target-version = "py310"

# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I", "N", "UP", "A", "PT"]
#Allow uppercase names for e.g. call_AD
#Don't add strict=False to zips (B905)
ignore = ["N806", "N802", "A001", "A002", "B905", "RUF"]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-third-party = [
  "hypothesis",
  "msprime",
  "numpy",
  "pandas",
  "pytest",
  "setuptools",
  "sgkit",
  "zarr"
]
