[build-system]
requires = ["setuptools >= 69", "setuptools_scm[toml] >= 8"]
build-backend = "setuptools.build_meta"

[project]
name = "bio2zarr"
description = "Convert bioinformatics data to Zarr"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "sgkit Developers", email = "project@sgkit.dev"},
]
dependencies = [
  "numpy>=2",
  "zarr >= 2.17,< 3",
  # Pinning numcodecs due to https://github.com/zarr-developers/zarr-python/issues/2963
  "numcodecs[msgpack]!=0.14.0,!=0.14.1,<0.16",
  "tabulate",
  "tqdm",
  "humanfriendly",
  # cyvcf2 also pulls in coloredlogs and click
  "coloredlogs",
  "click",
  # Using pandas for reading plink files, but will be useful more generally
  "pandas"
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Operating System :: MacOS :: MacOS X",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering"
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/sgkit-dev/bio2zarr"
documentation = "https://sgkit-dev.github.io/bio2zarr/"

[project.scripts]
vcf2zarr = "bio2zarr.cli:vcf2zarr_main"
vcfpartition = "bio2zarr.cli:vcfpartition"
tskit2zarr = "bio2zarr.cli:tskit2zarr_main"
plink2zarr = "bio2zarr.cli:plink2zarr_main"

[project.optional-dependencies]
dev = [
  "click>=8.2.0",
  "hypothesis-vcf",
  "msprime",
  "pysam",
  "pytest",
  "pytest-coverage",
  "pytest-xdist",
  "tqdm",
  "tskit>=1",
  "bed_reader",
  "cyvcf2",
  "xarray<2025.03.1",
  "dask[array]>=2022.01.0,<=2024.8.0"
]
tskit = ["tskit>=1"]
vcf = ["cyvcf2"]
all = [
  "tskit>=1",
  "cyvcf2"
]


[tool.setuptools]
packages = ["bio2zarr"]

[tool.setuptools_scm]
version_file = "bio2zarr/_version.py"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--cov=bio2zarr --cov-report term-missing"

[tool.ruff]
# Assume Python 3.10
target-version = "py310"

# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I", "N", "UP", "A", "PT"]
#Allow uppercase names for e.g. call_AD
#Don't add strict=False to zips (B905)
ignore = ["N806", "N802", "A001", "A002", "B905", "RUF"]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-third-party = [
  "hypothesis",
  "msprime",
  "numpy",
  "pandas",
  "pytest",
  "setuptools",
  "xarray",
  "zarr"
]
