[metadata]
name = bio2zarr
author = sgkit Developers
author_email = project@pystatgen.org
license = Apache
description = FIXME
long_description_content_type=text/x-rst
long_description =
    FIXME
url = https://github.com/pystatgen/bio2zarr
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering

[options]
packages = bio2zarr
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.8
install_requires =
    numpy
    zarr >= 2.10.0, != 2.11.0, != 2.11.1, != 2.11.2
    click
    tabulate
    tqdm
    humanfriendly
    # cyvcf2 also pulls in coloredlogs and click
    # colouredlogs pulls in humanfriendly
    cyvcf2
    bed_reader 
setup_requires =
    setuptools >= 41.2
    setuptools_scm

[options.entry_points]
console_scripts = 
    vcf2zarr = bio2zarr.cli:vcf2zarr
    plink2zarr = bio2zarr.cli:plink2zarr

[flake8]
ignore =
    # whitespace before ':' - doesn't work well with black
    E203
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503

[isort]
profile = black
default_section = THIRDPARTY
known_first_party = sgkit
known_third_party = hypothesis,msprime,numpy,pandas,pytest,setuptools,sgkit,zarr
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

[tool:pytest]
testpaths = tests
addopts = --cov=bio2zarr --cov-report term-missing 
